--- a/TP2CSS.html
+++ b/TP2CSS.html
@@ -25,7 +25,7 @@
         <div class="contenu">
 
             <div id="Contenu">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, quidem? Ex blanditiis doloremque veritatis beatae obcaecati iusto distinctio. Minima molestias voluptatibus exercitationem inventore corporis accusamus voluptates consequatur reiciendis saepe dicta.</p>
+                <p><text>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </text>, quidem? Ex blanditiis doloremque veritatis beatae obcaecati iusto distinctio. Minima molestias voluptatibus exercitationem inventore corporis accusamus voluptates consequatur reiciendis saepe dicta.</p>
                 <p>Contenu</p>
             </div>
         
