--- a/TP2CSS.html
+++ b/TP2CSS.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <title>TP2CSS</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -19,26 +21,145 @@
 
             <div id="menu_bas">
                 <p>menu bas</p>
-            </div> 
+            </div>
         </div>
 
         <div class="contenu">
 
             <div id="Contenu">
-                <p><text>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </text>, quidem? Ex blanditiis doloremque veritatis beatae obcaecati iusto distinctio. Minima molestias voluptatibus exercitationem inventore corporis accusamus voluptates consequatur reiciendis saepe dicta.</p>
+                <div id="text">
+                    <p>
+                        <span id="blue">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        </span>
+
+                        <span id="red">
+                            , quidem? Ex blanditiis doloremque veritatis beatae obcaecati iusto distinctio.
+                        </span>
+
+                        Minima molestias voluptatibus exercitationem inventore corporis accusamus voluptates consequatur
+                        reiciendis saepe dicta.
+                    </p>
+                </div>
                 <p>Contenu</p>
-            </div>
-        
-            <div id="news">
-                <p>news</p>
-            </div>
 
-        </div>
 
-        <div id="pied_de_page">
-            <p>Pied de page</p>
+
+                <table>
+                    <thead>
+
+
+                        <caption>
+                            <div class="table_red">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. !
+                            </div>
+                        </caption>
+                        <tr>
+
+                            <th scope="col">
+                                <div class="table_vert">Lorem ipsum adipisicing</div>
+                            </th>
+                            <th scope="col">
+                                <div class="table_vert">dolor consectetur elit</div>
+                            </th>
+                            <th scope="col">
+                                <div class="table_vert">Age Voluptates optio</div>
+                            </th>
+
+                        </tr>
+                        <tr>
+                            <th scope="row">
+                                <div class="table_vert">amet neque rerum</div>
+                            </th>
+                            <td>
+                                <div class="table_vert">consequuntur consequatur eveniet</div>
+                            </td>
+                            <td>
+                                <div class="table_vert">nam, corrupti perspiciatis</div>
+                            </td>
+                        </tr>
+                    </thead>
+                </table>
+                <table>
+                    <thead>
+                        <tr>
+                            <caption>
+                                <div class="table_red">
+                                    Nihil blanditiis porro provident nesciunt consequuntur commodi reprehenderit
+                                </div>
+                            </caption>
+                            <th scope="col">
+                                <div class="table_blue">nam, corrupti perspiciatis
+                            </th>
+            </div>
+            <th scope="col">
+                <div class="table_blue">Most interest in
+            </th>
         </div>
-    
+        <th scope="col">
+            <div class="table_blue">labore placeat doloremque
+        </th>
+    </div>
+    </tr>
+    <tr>
+        <th scope="row">
+            <div class="table_vert">provident recusandae Error</div>
+        </th>
+        <td>
+            <div class="table_vert">repellat, dignissimos debitis</div>
+        </td>
+        <td>
+            <div class="table_vert">maiores deserunt modi!</div>
+        </td>
+    </tr>
+    </thead>
+    </table>
+
+    <table>
+        <thead>
+            <tr>
+
+                <th scope="col">
+                    <div class="table_vert">Repellendus laboriosam dolore</div>
+                </th>
+                <th scope="col">
+                    <div class="table_vert">dolorum aliquam facilis/div>
+                </th>
+                <th scope="col">
+                    <div class="table_vert">voluptatibus, laborum cupiditate</div>
+                </th>
+
+            </tr>
+            <tr>
+                <th scope="row">
+                    <div class="table_vert">at quaerat temporibus</div>
+                </th>
+                <td>
+                    <div class="table_vert">rem dignissimos quidem</div>
+                </td>
+                <td>
+                    <div class="table_vert">vel illum eius</div>
+                </td>
+            </tr>
+        </thead>
+
+
+    </table>
+
+
+    </div>
+
+    <div id="news">
+        <p>news</p>
+    </div>
+
+    </div>
+
+    <div id="pied_de_page">
+        <p>Pied de page</p>
+    </div>
+
     </div>
 </body>
+
 </html>
